syntax = "proto3";
package iritamod.perm;

import "perm/perm.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bianjieai/iritamod/modules/perm/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the perm Msg service.
service Msg {
    // AddRoles defines a method for adding a role for the operator.
    rpc AddRoles(MsgAddRoles) returns (MsgAddRolesResponse);

    // RemoveRoles defines a method for removing a role for the operator.
    rpc RemoveRoles(MsgRemoveRoles) returns (MsgRemoveRolesResponse);

    // BlockAccount defines a method for block a account
    rpc BlockAccount(MsgBlockAccount) returns (MsgBlockAccountResponse);

    // UnblockAccount defines a method for unblock a blocked account
    rpc UnblockAccount(MsgUnblockAccount) returns (MsgUnblockAccountResponse);
}

// MsgAddRoles defines an SDK message for adding roles to a address.
message MsgAddRoles {
    option (gogoproto.equal) = true;

    string address = 1;
    repeated Role roles = 2;
    string operator = 3;
}

// MsgAddRolesResponse defines the Msg/AddRoles response type.
message MsgAddRolesResponse { }

// MsgRemoveRoles defines an SDK message for removing roles from an existing address.
message MsgRemoveRoles {
    option (gogoproto.equal) = true;

    string address = 1;
    repeated Role roles = 2;
    string operator = 3;
}

// MsgRemoveRolesResponse defines the Msg/RemoveRoles response type.
message MsgRemoveRolesResponse { }

// MsgBlockAccount defines an SDK message for blocking an account.
message MsgBlockAccount {
    option (gogoproto.equal) = true;

    string address = 1;
    string operator = 2;
}

// MsgBlockAccountResponse defines the Msg/BlockAccount response type.
message MsgBlockAccountResponse { }

// MsgUnblockAccount defines an SDK message for unblocking an account.
message MsgUnblockAccount {
    option (gogoproto.equal) = true;

    string address = 1;
    string operator = 2;
}

// MsgUnblockAccountResponse defines the Msg/UnblockAccount response type.
message MsgUnblockAccountResponse { }
